fix: scale down fonts on PC and fix element overlap

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .app__rows {
-  margin-top: -30px;
+  margin-top: 10px;
   position: relative;
   z-index: 20;
   padding-bottom: 50px;
